--- a/LandingView/LandingView/Resources/Storyboard/Base.lproj/Main.storyboard
+++ b/LandingView/LandingView/Resources/Storyboard/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OXm-Kh-Zg1">
-                                        <rect key="frame" x="60" y="497" width="255" height="50"/>
+                                        <rect key="frame" x="60" y="477" width="255" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="DFM-oq-a88"/>
                                         </constraints>
@@ -36,7 +36,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZA-WI-be2">
-                                        <rect key="frame" x="60" y="557" width="255" height="50"/>
+                                        <rect key="frame" x="60" y="537" width="255" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="ZrJ-o9-iuj"/>
                                         </constraints>
@@ -46,25 +46,34 @@
                                         </state>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUGCHAIN STUDIO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Piv-Ik-lRc">
-                                        <rect key="frame" x="50" y="150" width="275" height="30"/>
+                                        <rect key="frame" x="50" y="120" width="275" height="30"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile developer &amp; Photographer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9D-0b-ADf">
-                                        <rect key="frame" x="50" y="185" width="275" height="18"/>
+                                        <rect key="frame" x="50" y="155" width="275" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2HQ-Zl-1r7">
+                                        <rect key="frame" x="337" y="635" width="30" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <state key="normal" title="Skip">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="2HQ-Zl-1r7" secondAttribute="bottom" constant="5" id="0cw-fe-xy1"/>
                                     <constraint firstItem="t9D-0b-ADf" firstAttribute="leading" secondItem="Piv-Ik-lRc" secondAttribute="leading" id="4YE-Yw-nMK"/>
                                     <constraint firstItem="xZA-WI-be2" firstAttribute="top" secondItem="OXm-Kh-Zg1" secondAttribute="bottom" constant="10" id="8Ny-w5-eZQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="2HQ-Zl-1r7" secondAttribute="trailing" constant="8" id="9mv-ja-eqs"/>
                                     <constraint firstAttribute="trailing" secondItem="xZA-WI-be2" secondAttribute="trailing" constant="60" id="Gao-gw-AOS"/>
-                                    <constraint firstAttribute="bottom" secondItem="xZA-WI-be2" secondAttribute="bottom" constant="60" id="OA4-FF-a2f"/>
-                                    <constraint firstItem="Piv-Ik-lRc" firstAttribute="top" secondItem="KBo-M8-Dml" secondAttribute="top" constant="150" id="RtH-Yu-FUk"/>
+                                    <constraint firstAttribute="bottom" secondItem="xZA-WI-be2" secondAttribute="bottom" constant="80" id="OA4-FF-a2f"/>
+                                    <constraint firstItem="Piv-Ik-lRc" firstAttribute="top" secondItem="KBo-M8-Dml" secondAttribute="top" constant="120" id="RtH-Yu-FUk"/>
                                     <constraint firstItem="t9D-0b-ADf" firstAttribute="trailing" secondItem="Piv-Ik-lRc" secondAttribute="trailing" id="Tqb-It-sZx"/>
                                     <constraint firstItem="Piv-Ik-lRc" firstAttribute="leading" secondItem="KBo-M8-Dml" secondAttribute="leading" constant="50" id="Yzq-Qn-Edd"/>
                                     <constraint firstItem="xZA-WI-be2" firstAttribute="leading" secondItem="KBo-M8-Dml" secondAttribute="leading" constant="60" id="jo2-T0-Y8C"/>
